UrlShortCut [#505134 #510424](Refactor logic: move total iteration to the database, remove config files, and move settings to application.properties)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
-jdbc.url=jdbc:postgresql://127.0.0.1:5432/job4j_url_shortcut
-jdbc.username=postgres
-jdbc.password=password
-jdbc.driver=org.postgresql.Driver
-spring.liquibase.change-log=classpath:/db.changelog-master.yaml
-jwt.secret=4183a83d-e694-4826-983d-efc33574cda5
-spring.liquibase.enabled=false
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/job4j_url_shortcut
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.liquibase.change-log=classpath:db/master.xml
+spring.liquibase.url=jdbc:postgresql://127.0.0.1:5432/job4j_url_shortcut
+spring.liquibase.user=postgres
+spring.liquibase.password=password
+
 spring.h2.console.enabled=true
+
+jwt.secret=4183a83d-e694-4826-983d-efc33574cda5
