--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,3 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-maven
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
 name: GitHub Action
 
 on:
@@ -15,9 +7,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container:
-      image: maven:3.8.4-openjdk-17
-      options: --memory=8g
+
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: job4j_url_shortcut
+        options: --health-cmd="pg_isready -U postgres" --health-interval=10s --health-timeout=5s --health-retries=5
 
     steps:
       - uses: actions/checkout@v3
@@ -36,6 +36,13 @@ jobs:
         run: mvn clean package --file pom.xml
 
       - name: Run tests with Maven
+        env:
+          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/job4j_url_shortcut
+          SPRING_DATASOURCE_USERNAME: postgres
+          SPRING_DATASOURCE_PASSWORD: password
+          SPRING_LIQUIBASE_URL: jdbc:postgresql://localhost:5432/job4j_url_shortcut
+          SPRING_LIQUIBASE_USER: postgres
+          SPRING_LIQUIBASE_PASSWORD: password
         run: mvn test -X
 
       - name: Archive test reports
